@@ -139,6 +139,11 @@ void AnsiWidget::drawEllipse(int xc, int yc, int rx, int ry, int fill) {
   flush(false, false, MAX_PENDING_GRAPHICS);
 }
 
+void AnsiWidget::drawImage(ImageDisplay &image) {
+  _back->drawImage(image);
+  flush(false, false, MAX_PENDING_GRAPHICS);
+}
+
 // draw a line onto the offscreen buffer
 void AnsiWidget::drawLine(int x1, int y1, int x2, int y2) {
   _back->drawLine(x1, y1, x2, y2);
